--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
+/* App.css */
+
+body {
+	font-family: 'Arial', sans-serif;
+	background-color: #4793AF;
+	margin: 0;
+	padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-container {
+	max-width:60%;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #FFC470;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+	color: #333;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+form {
+  background-color: #FFC470;
+
+	display: flex;
+	flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+label {
+	margin-bottom: 8px;
+	font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+	margin-bottom: 15px;
+	padding: 10px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.button1,
+.button2 {
+	margin-bottom: 15px;
+	padding: 10px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+}
+
+.button1 {
+	width: 100%;
+}
+
+.button2 {
+	width: 49%;
+
+}
+
+textarea {
+	margin-bottom: 15px;
+	padding: 10px;
+	font-size: 16px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+	resize: vertical;
+	height: 100px;
+	width: 100%;
+}
+
+button {
+	background-color: #DD5746;
+	color: #fff;
+	cursor: pointer;
+
+}
+
+button:hover {
+	background-color: #8B322C;
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+li {
+	margin-bottom: 15px;
+	padding: 10px;
+	background-color: #eee;
+	border-radius: 5px;
+}
+
+li strong {
+	font-size: 18px;
+	color: #333;
+}
+
+li p {
+	font-size: 16px;
+	color: #555;
 }
