--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,69 @@
 /* App.css */
+.addnotes{
+	max-width :80%;
+	max-height: 80%;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #141E46;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 25px;
+	color:#41B06E ;
+}
+.notelistCurve{
+	max-width:80%;
+	max-height: 50vh;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #141E46;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 25px;
+	padding: 1rem;
 
+}
+.notesList{
+	max-width:80%;
+	max-height: 30vh;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #141E46;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 25px;
+	overflow: scroll;
+	}
 body {
 	font-family: 'Arial', sans-serif;
-	background-color: #4793AF;
+	background-color: #FFF5E0;
 	margin: 0;
 	padding: 0;
 }
-
-.app-container {
-	max-width:60%;
+.canvas{
+	max-width:90%;
+	max-height: 20vh;
 	margin: 20px auto;
-	padding: 20px;
-	background-color: #FFC470;
+	background-color: #FFF5E0;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
+	gap: 2rem;
+	overflow: hidden;
+
+}
+.app-container {
+	
+	display:flex;
+	max-width:90%;
+	max-height: 80%;
+	margin: 20px auto;
+	padding: 20px;
+	background-color: #8DECB4;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 25px;
+	gap: 2rem;
+	
+}
+@media only screen and (max-width: 600px){
+	.app-container {
+		flex-flow: column;
+	}
 }
 
 h1 {
