--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,22 @@
 	color:#41B06E ;
 }
 .notelistCurve{
-	max-width:80%;
-	max-height: 50vh;
+	border:0.2rem solid #FFF5E0;
+	max-width:50%;
+	max-height: 70vh;
 	margin: 20px auto;
 	padding: 20px;
 	background-color: #141E46;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
 	padding: 1rem;
+	padding-bottom: 4rem;
 
 }
 .notesList{
+
 	max-width:80%;
-	max-height: 30vh;
+	max-height: 60vh;
 	margin: 20px auto;
 	padding: 20px;
 	background-color: #141E46;
@@ -40,13 +43,14 @@ body {
 	max-width:90%;
 	max-height: 20vh;
 	margin: 20px auto;
-	background-color: #FFF5E0;
+	background-color: #8DECB4;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
 	gap: 2rem;
 	overflow: hidden;
 
 }
+
 .app-container {
 	
 	display:flex;
@@ -55,15 +59,24 @@ body {
 	margin: 20px auto;
 	padding: 20px;
 	background-color: #8DECB4;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border:0.2rem solid rgb(9, 8, 8);
 	border-radius: 25px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 	gap: 2rem;
 	
 }
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 1000px){
 	.app-container {
 		flex-flow: column;
 	}
+	.preview{
+		scale: 0.5;
+	}
+	.notelistCurve{
+		
+	}
+
 }
 
 h1 {
@@ -83,11 +96,13 @@ label {
 }
 
 input {
+	background-color: #41B06E;
+
 	margin-bottom: 15px;
 	padding: 10px;
 	font-size: 16px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
+	border: 2px solid #FFF5E0;
+	border-radius: 15px;
 	box-sizing: border-box;
 	width: 100%;
 }
@@ -112,14 +127,16 @@ input {
 }
 
 textarea {
+	background-color: #41B06E;
+
 	margin-bottom: 15px;
 	padding: 10px;
 	font-size: 16px;
-	border: 1px solid #ccc;
-	border-radius: 5px;
+	border: 2px solid #FFF5E0;
+	border-radius: 25px;
 	box-sizing: border-box;
 	resize: vertical;
-	height: 100px;
+	height: 220px;
 	width: 100%;
 }
 
@@ -140,10 +157,12 @@ ul {
 }
 
 li {
+	border: 2px solid #FFF5E0;
+
 	margin-bottom: 15px;
 	padding: 10px;
-	background-color: #eee;
-	border-radius: 5px;
+	background-color: #41B06E;
+	border-radius: 15px;
 }
 
 li strong {
